--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.kafka:spring-kafka'
 
+	compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.mysql:mysql-connector-j'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
