--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=ledger-system
+
+
+# MySQL DataSource 설정 
+spring.datasource.url=jdbc:mysql://localhost:3306/ledger_system?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=lvnvn
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA 
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.hibernat.SQL=debug
