--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.projectlombok:lombok'
+	testImplementation 'com.h2database:h2'
 	
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
